<resources>
    <string name="app_name">myQuiz</string>
    //spalsh
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Quiz!</string>
    <string name="slide_1_desc">The easiest way to enhance youe knowlege!</string>

    <string name="slide_2_title">Upcoming Quiz</string>
    <string name="slide_2_desc">List of all upcoming Quizes !</string>

    <string name="slide_3_title">Teams!</string>
    <string name="slide_3_desc">Participate in team!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>


    <string name="text_1">What is the job of Chandler Bing in F.R.I.E.N.D.S ?</string>
    //navigation
    <string name="action_right_drawer">Right</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="seconds">Sec</string>
    <string name="minutes">min</string>
    <string name="hours">hr</string>
    <string name="days">days</string>
    <string name="worldcup_2k19">Quiz started</string>
    <string name="q1">Question 1</string>
    <string name="q2">Question 2</string>
    <string name="q3">Question 3</string>
    <string name="q4">Question 4</string>
</resources>
