<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail_timeleftActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rel2">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#20d2bb"
            android:id="@+id/appbar_detail">
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar_detail"
                android:titleTextColor="#000000">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel2">
            <LinearLayout
                android:id="@+id/LinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tveventStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="50sp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/worldcup_2k19"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="gone" />
                <LinearLayout
                    android:id="@+id/LinearLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtDay"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#4a0000"
                        android:textSize="35sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_Day"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/days"
                        android:textAppearance="?android:attr/textAppearanceSmall"

                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtHour"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#4a0000"
                        android:textSize="35sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_Hour"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/hours"
                        android:textAppearance="?android:attr/textAppearanceSmall"

                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtMinute"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#4a0000"
                        android:textSize="35sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_Minute"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/minutes"
                        android:textAppearance="?android:attr/textAppearanceSmall"

                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtSecond"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#4a0000"
                        android:textSize="35sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_Second"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/seconds"
                        android:textAppearance="?android:attr/textAppearanceSmall"

                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:elevation="30dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/LinearLayout"
        android:id="@+id/image_detail"/>
            <Button
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="Join Now"
                android:layout_below="@+id/image_detail"
                android:layout_marginTop="80dp"
                android:id="@+id/btn_join"
                android:background="#20d2bb"/>
</RelativeLayout>
</RelativeLayout>
